--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,21 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  
+
+  <filter>
+    <filter-name>myFilter</filter-name>
+    <filter-class>me.whiteship.MyFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>myFilter</filter-name>
+    <servlet-name>hello</servlet-name>
+  </filter-mapping>
+
+  <listener>
+    <listener-class>me.whiteship.MyListener</listener-class>
+  </listener>
+
   <servlet>
     <servlet-name>hello</servlet-name>
     <servlet-class>me.whiteship.HelloServlet</servlet-class>
